.metadata/.plugins/org.eclipse.cdt.ui/29.01.2021 Homework 3.build.log
18:18:05 **** Rebuild of configuration Debug for project 29.01.2021 Homework 3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o homework_3.o "..\\homework_3.cpp" 
..\homework_3.cpp:14:1: error: '::main' must return 'int'
   14 | void main()
      | ^~~~

18:18:06 Build Failed. 1 errors, 0 warnings. (took 1s.817ms)

